[package]
name = "manhattan-tree"
version = "0.1.1"
authors = ["Phoenix <kahlo.phoenix@gmail.com>"]
description = "A spatial tree which can effiently find closest key to a point, by manhattan distance."
readme = "README.md"
repository = "https://github.com/gretchenfrage/manhattan-tree"
categories = ["data-structures"]
license = "MIT"

[dependencies]
bonzai = "0.2.1"
num = "0.2.0"
smallqueue = "0.1.0"
through = "0.1.0"

[dev-dependencies]
rand = "0.5.5"
